// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="ck91qq5 soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c-3srah8 soui-radio-group"
>
  <div
    class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="c-6kjs3c soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-bmqjip soui-radio-indicator-wrapper"
    >
      <span
        class="c-48u5rw soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-9af744 soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="c-bfk39a soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c-v3nf9i soui-slider-track"
    >
      <div
        class="c-obx01w soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="cc1bewu soui-slider-indicator chw1n0d soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-7i2z09 soui-slider-end-value c-v2ug9s soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="ck91qq5 soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cgoys7t soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
